--- a/Aba1.html
+++ b/Aba1.html
@@ -15,6 +15,22 @@
 <body>
     
 
+    <div id="conteudo5"  >
+
+
+        Todo o texto que colocar dentro está comentado, ou seja, não aparecerá na página. 
+        Dentro de um comentário pode colocar o texto ou código HTML, como etiquetas.
+         O comentário começa por  e finaliza por  
+         Tudo o que colocar entre essas etiquetas está comentado.
+    
+
+
+    </div>
+
+
+
+
+
 
     <div id="conteudo3" >
 
